Set up jQuery and ran JS

--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -3,3 +3,13 @@
 @import 'header';
 @import 'questionBox';
 @import 'resultBox';
+
+// tt norms, font pair, josefin sans, reliablepsd
+// 1.6 line height
+// coolrs.co
+// color.halipixel.com
+
+body {
+    background-color: gold;
+    
+}
