--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -9,7 +9,42 @@
 // coolrs.co
 // color.halipixel.com
 
+// Strip Club
+span,
+ul,
+li,
+a,
+h1,
+h2,
+p,
+button {
+    margin: 0;
+    padding: 0;
+}
+
+ul,
+li,
+a {
+    list-style: none;
+    text-decoration: none;
+}
+
+html {
+    font-size: 62.5%;
+}
+
 body {
-    background-color: gold;
-    
+    background-color: #171717;
+    color: white;
+}
+
+img {
+    width: 100%;
+    display: block;
+}
+
+.wrapper {
+    max-width: 1100px;
+    margin: 0 auto;
+    width: 90%;
 }
