--- a/styles/style.css
+++ b/styles/style.css
@@ -179,6 +179,41 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   overflow: hidden;
 }
 
+span,
+ul,
+li,
+a,
+h1,
+h2,
+p,
+button {
+  margin: 0;
+  padding: 0;
+}
+
+ul,
+li,
+a {
+  list-style: none;
+  text-decoration: none;
+}
+
+html {
+  font-size: 62.5%;
+}
+
 body {
-  background-color: gold;
+  background-color: #171717;
+  color: white;
+}
+
+img {
+  width: 100%;
+  display: block;
+}
+
+.wrapper {
+  max-width: 1100px;
+  margin: 0 auto;
+  width: 90%;
 }
