--- a/styles/scss/_questionBox.scss
+++ b/styles/scss/_questionBox.scss
@@ -1,3 +1,9 @@
 // questions-container
 // question
 // question1-5
+
+.question {
+    border: 6px solid white;
+    height: 90vh;
+    margin-bottom: 50px;
+}
