--- a/styles/style.css
+++ b/styles/style.css
@@ -185,10 +185,27 @@ header {
   margin-bottom: 50px;
 }
 
+.questionsContainer {
+  margin-top: 50px;
+}
+
 .question {
   border: 6px solid white;
   height: 90vh;
   margin-bottom: 50px;
+}
+
+.selectionContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.selection {
+  height: 400px;
+  width: calc(33% - 10px);
+  margin: 0 10px;
+  border: 3px solid gold;
 }
 
 span,
