Fixed up HTML, finished JS intro

--- a/styles/scss/_header.scss
+++ b/styles/scss/_header.scss
@@ -2,7 +2,12 @@
 header {
     border: 6px solid white;
     height: 90vh;
-    margin-bottom: 50px;
+    margin: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
 }
 
 
