--- a/styles/scss/_questionBox.scss
+++ b/styles/scss/_questionBox.scss
@@ -16,17 +16,18 @@
 
 .selectionContainer {
     display: flex;
-
 }
 
 .selection {
-    color: black;
-    font-size: 4rem;
+    width: 33%;
+}
+
+.choice {
     height: 80px;
     width: calc(33% - 10px);
     margin: 0 10px;
-    background-color: gold;
-    border: 3px solid gold;
+    // background-color: gold;
+    border: 2px solid gold;
 
     &:hover {
         background-color: black;
