--- a/styles/scss/_header.scss
+++ b/styles/scss/_header.scss
@@ -1,7 +1,7 @@
 // Welcome Screen
 header {
-    border: 6px solid white;
-    height: 90vh;
+    // border: 6px solid white;
+    height: 100vh;
     margin: 50px;
     display: flex;
     align-items: center;
