--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -9,18 +9,16 @@
 // coolrs.co
 // color.halipixel.com
 
-// Strip Club
-// span,
-// ul,
-// li,
-// a,
-// h1,
-// h2,
-// p,
-// button {
-//     margin: 0;
-//     padding: 0;
-// }
+Strip Club
+span,
+h1,
+h2,
+p,
+button,
+form {
+    margin: 0;
+    padding: 0;
+}
 
 
 
