Finally used CSS grid, header formatting

--- a/styles/scss/_variablesMixins.scss
+++ b/styles/scss/_variablesMixins.scss
@@ -1,18 +1,39 @@
 // Colours & Palettes
+$black: #000000;
+$white: #FFFFFF;
 
 
+//Pastel Colours
+$pastelPeach: #FFDDD1;
+$pastelPink: #F0C9D7;
+$pastelPurple: #D4C2E1;
+$pastelBlue: #BDD7EA;
 
 
+// https://www.color-hex.com/color-palette/22262
+
+// Goth Colours
+$grungeBlue: #0f005b;
+$grungePurple: #2e0059;
+$grungeRed: #5b0000;
+$grungeGreen: #003300;
+
+// https://www.color-hex.com/color-palette/34369
 
 
+// Vapor Colours
+$vaporGold: #ffa818;
+$vaporOrange: #f06000;
+$vaporPink:#f00078;
+$vaporPurple: #a800c0;
 
 
-
-
-
-
-
+// https://www.houstonwinefest.com/twilight-sunset-color-palette-2/
 
 
 
 // Fonts
+    $sourceHeadingfont: 'Source Code Pro', monospace;
+    $revaliaHeadingfont: 'Revalia', cursive;
+    $bodyFont: 'Noto Sans', sans-serif;
+
