--- a/styles/scss/_questionBox.scss
+++ b/styles/scss/_questionBox.scss
@@ -8,6 +8,28 @@ img {
 }
 
 
+.welcome {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    grid-row-gap: 20px;
+    
+    .title { 
+        grid-area: 1 / 1 / 3 / 8; 
+        }
+    form { 
+        grid-area: 3 / 2 / 5 / 7; 
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        }
+    }
+
+    .letsGo { 
+    grid-area: 5 / 3 / 7 / 6; 
+    } 
+
 
 
 
