--- a/styles/scss/_questionBox.scss
+++ b/styles/scss/_questionBox.scss
@@ -7,28 +7,37 @@ img {
     height: 300px;
 }
 
-
 .welcome {
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: repeat(6, 1fr);
-    grid-row-gap: 20px;
-    
-    .title { 
-        grid-area: 1 / 1 / 3 / 8; 
-        }
+display: grid;
+grid-template-columns: repeat(7, 1fr);
+grid-template-rows: repeat(7, 1fr);
+
+    h1 { 
+        grid-area: 1 / 1 / 3 / 8;
+        padding-bottom: 20px; 
+    }
+
+    span:first-of-type { 
+        grid-area: 3 / 3 / 4 / 6; 
+    }
+
     form { 
-        grid-area: 3 / 2 / 5 / 7; 
+        grid-area: 4 / 3 / 6 / 6; 
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
-        }
+
+            #waveName {
+                padding: 10px 50px;
+            }
     }
 
-    .letsGo { 
-    grid-area: 5 / 3 / 7 / 6; 
-    } 
+}
+
+.letsGo { 
+    grid-area: 6 / 3 / 8 / 6; 
+} 
 
 
 
