--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -53,6 +53,8 @@ header,
 
 h1 {
     font-family: $revaliaHeadingfont;
-    font-size: 5rem;
-    // box-shadow: 
+    font-size: 6rem;
+    margin-bottom: 20px;
+    box-shadow: -30px -15px 0px 0px $vaporOrange;
+    background-color: #08C5D3;
 }
