--- a/styles/style.css
+++ b/styles/style.css
@@ -208,25 +208,33 @@ img {
   display: grid;
   -ms-grid-columns: (1fr)[7];
       grid-template-columns: repeat(7, 1fr);
-  -ms-grid-rows: (1fr)[6];
-      grid-template-rows: repeat(6, 1fr);
-  grid-row-gap: 20px;
+  -ms-grid-rows: (1fr)[7];
+      grid-template-rows: repeat(7, 1fr);
 }
 
-.welcome .title {
+.welcome h1 {
   -ms-grid-row: 1;
   -ms-grid-row-span: 2;
   -ms-grid-column: 1;
   -ms-grid-column-span: 7;
   grid-area: 1 / 1 / 3 / 8;
+  padding-bottom: 20px;
+}
+
+.welcome span:first-of-type {
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 3;
+  grid-area: 3 / 3 / 4 / 6;
 }
 
 .welcome form {
-  -ms-grid-row: 3;
+  -ms-grid-row: 4;
   -ms-grid-row-span: 2;
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 5;
-  grid-area: 3 / 2 / 5 / 7;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 3;
+  grid-area: 4 / 3 / 6 / 6;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -242,12 +250,16 @@ img {
           justify-content: space-between;
 }
 
+.welcome form #waveName {
+  padding: 10px 50px;
+}
+
 .letsGo {
-  -ms-grid-row: 5;
+  -ms-grid-row: 6;
   -ms-grid-row-span: 2;
   -ms-grid-column: 3;
   -ms-grid-column-span: 3;
-  grid-area: 5 / 3 / 7 / 6;
+  grid-area: 6 / 3 / 8 / 6;
 }
 
 .result,
@@ -294,5 +306,9 @@ header,
 
 h1 {
   font-family: "Revalia", cursive;
-  font-size: 5rem;
+  font-size: 6rem;
+  margin-bottom: 20px;
+  -webkit-box-shadow: -30px -15px 0px 0px #f06000;
+          box-shadow: -30px -15px 0px 0px #f06000;
+  background-color: #08C5D3;
 }
