--- a/styles/scss/_questionBox.scss
+++ b/styles/scss/_questionBox.scss
@@ -8,30 +8,32 @@ img {
 }
 
 .welcome {
-display: grid;
-grid-template-columns: repeat(7, 1fr);
-grid-template-rows: repeat(7, 1fr);
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: repeat(7, 1fr);
 
-    h1 { 
-        grid-area: 1 / 1 / 3 / 8;
-        padding-bottom: 20px; 
-    }
+        h1 { 
+            grid-area: 1 / 1 / 3 / 8;
+            padding: 20px; 
+            letter-spacing: 1px;
+            // color: $black;
+        }
 
-    span:first-of-type { 
-        grid-area: 3 / 3 / 4 / 6; 
-    }
+        span:first-of-type { 
+            grid-area: 3 / 3 / 4 / 6; 
+        }
 
-    form { 
-        grid-area: 4 / 3 / 6 / 6; 
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
+        form { 
+            grid-area: 4 / 3 / 6 / 6; 
 
             #waveName {
                 padding: 10px 50px;
             }
-    }
+
+            #startWave {
+                padding: 10px 30px;
+            }
+        }
 
 }
 
