--- a/styles/scss/_variablesMixins.scss
+++ b/styles/scss/_variablesMixins.scss
@@ -1,31 +1,31 @@
 // Colours & Palettes
-$black: #000000;
-$white: #FFFFFF;
+    $black: #000000;
+    $white: #FFFFFF;
 
 
 //Pastel Colours
-$pastelPeach: #FFDDD1;
-$pastelPink: #F0C9D7;
-$pastelPurple: #D4C2E1;
-$pastelBlue: #BDD7EA;
+    $pastelPeach: #FFDDD1;
+    $pastelPink: #F0C9D7;
+    $pastelPurple: #D4C2E1;
+    $pastelBlue: #BDD7EA;
 
 
 // https://www.color-hex.com/color-palette/22262
 
 // Goth Colours
-$grungeBlue: #0f005b;
-$grungePurple: #2e0059;
-$grungeRed: #5b0000;
-$grungeGreen: #003300;
+    $grungeBlue: #0f005b;
+    $grungePurple: #2e0059;
+    $grungeRed: #5b0000;
+    $grungeGreen: #003300;
 
 // https://www.color-hex.com/color-palette/34369
 
 
 // Vapor Colours
-$vaporGold: #ffa818;
-$vaporOrange: #f06000;
-$vaporPink:#f00078;
-$vaporPurple: #a800c0;
+    $vaporGold: #ffa818;
+    $vaporOrange: #f06000;
+    $vaporPink:#f00078;
+    $vaporPurple: #a800c0;
 
 
 // https://www.houstonwinefest.com/twilight-sunset-color-palette-2/
@@ -34,6 +34,10 @@ $vaporPurple: #a800c0;
 
 // Fonts
     $sourceHeadingfont: 'Source Code Pro', monospace;
-    $revaliaHeadingfont: 'Revalia', cursive;
+    $archivoHeadingfont: 'Archivo', sans-serif;
     $bodyFont: 'Noto Sans', sans-serif;
 
+    @mixin fontSize($sizeValue) {
+    font-size: $sizeValue * 1px;
+    font-size: ($sizeValue/10) * 1rem;
+}
