--- a/styles/style.css
+++ b/styles/style.css
@@ -218,7 +218,8 @@ img {
   -ms-grid-column: 1;
   -ms-grid-column-span: 7;
   grid-area: 1 / 1 / 3 / 8;
-  padding-bottom: 20px;
+  padding: 20px;
+  letter-spacing: 1px;
 }
 
 .welcome span:first-of-type {
@@ -235,23 +236,14 @@ img {
   -ms-grid-column: 3;
   -ms-grid-column-span: 3;
   grid-area: 4 / 3 / 6 / 6;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
 }
 
 .welcome form #waveName {
   padding: 10px 50px;
+}
+
+.welcome form #startWave {
+  padding: 10px 30px;
 }
 
 .letsGo {
@@ -296,6 +288,8 @@ body {
   background-color: black;
   color: white;
   font-family: "Noto Sans", sans-serif;
+  font-size: 20px;
+  font-size: 2rem;
 }
 
 header,
@@ -304,11 +298,29 @@ header,
   height: 100vh;
 }
 
+header {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.6)), to(rgba(0, 0, 0, 0.7))), url("/quizAssets/g-shoe.jpg");
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url("/quizAssets/g-shoe.jpg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+
 h1 {
-  font-family: "Revalia", cursive;
+  font-family: "Archivo", sans-serif;
   font-size: 6rem;
   margin-bottom: 20px;
-  -webkit-box-shadow: -30px -15px 0px 0px #f06000;
-          box-shadow: -30px -15px 0px 0px #f06000;
-  background-color: #08C5D3;
+}
+
+button,
+#startWave {
+  background-color: #ffa818;
+  border: 2px solid #ffa818;
+  font-weight: bolder;
+  text-transform: uppercase;
+}
+
+.letsGo p {
+  font-size: 35px;
+  font-size: 3.5rem;
 }
