--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -71,13 +71,48 @@ h1 {
 
 
 button,
-#startWave {
+#startWave,
+.redo {
     background-color: $vaporGold;
     border: 2px solid $vaporGold;
     font-weight: bolder;
     text-transform: uppercase;
 }
 
-.letsGo p {
-    @include fontSize(35);
+
+.welcome {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: repeat(7, 1fr);
+
+        h1 { 
+            grid-area: 1 / 1 / 3 / 8;
+            padding: 20px; 
+            letter-spacing: 1px;
+        }
+
+        span:first-of-type { 
+            grid-area: 3 / 3 / 4 / 6; 
+        }
+
+        form { 
+            grid-area: 4 / 3 / 6 / 6; 
+
+            #waveName {
+                padding: 10px 50px;
+            }
+
+            #startWave {
+                padding: 10px 30px;
+            }
+        }
+
+}
+
+.letsGo  {
+    grid-area: 6 / 3 / 8 / 6; 
+
+    p {
+        @include fontSize(35);
+    }
 }
