--- a/styles/style.css
+++ b/styles/style.css
@@ -194,64 +194,61 @@ header {
   text-align: center;
 }
 
-.question {
-  display: none;
-}
-
 img {
   width: 33%;
   height: 300px;
 }
 
-.welcome {
+.question {
+  display: none;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[7];
-      grid-template-columns: repeat(7, 1fr);
-  -ms-grid-rows: (1fr)[7];
-      grid-template-rows: repeat(7, 1fr);
+  -ms-grid-columns: (1fr)[8];
+      grid-template-columns: repeat(8, 1fr);
+  -ms-grid-rows: (1fr)[4];
+      grid-template-rows: repeat(4, 1fr);
 }
 
-.welcome h1 {
+h2 {
   -ms-grid-row: 1;
-  -ms-grid-row-span: 2;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 7;
-  grid-area: 1 / 1 / 3 / 8;
-  padding: 20px;
-  letter-spacing: 1px;
-}
-
-.welcome span:first-of-type {
-  -ms-grid-row: 3;
   -ms-grid-row-span: 1;
-  -ms-grid-column: 3;
-  -ms-grid-column-span: 3;
-  grid-area: 3 / 3 / 4 / 6;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 8;
+  grid-area: 1 / 1 / 2 / 9;
 }
 
-.welcome form {
+form {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 6;
+  grid-area: 2 / 2 / 4 / 8;
+}
+
+button {
   -ms-grid-row: 4;
-  -ms-grid-row-span: 2;
-  -ms-grid-column: 3;
-  -ms-grid-column-span: 3;
-  grid-area: 4 / 3 / 6 / 6;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 4;
+  -ms-grid-column-span: 2;
+  grid-area: 4 / 4 / 5 / 6;
 }
 
-.welcome form #waveName {
-  padding: 10px 50px;
+input[type=radio] {
+  visibility: hidden;
 }
 
-.welcome form #startWave {
-  padding: 10px 30px;
-}
-
-.letsGo {
-  -ms-grid-row: 6;
-  -ms-grid-row-span: 2;
-  -ms-grid-column: 3;
-  -ms-grid-column-span: 3;
-  grid-area: 6 / 3 / 8 / 6;
+.questionBox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .result,
@@ -313,11 +310,63 @@ h1 {
 }
 
 button,
-#startWave {
+#startWave,
+.redo {
   background-color: #ffa818;
   border: 2px solid #ffa818;
   font-weight: bolder;
   text-transform: uppercase;
+}
+
+.welcome {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[7];
+      grid-template-columns: repeat(7, 1fr);
+  -ms-grid-rows: (1fr)[7];
+      grid-template-rows: repeat(7, 1fr);
+}
+
+.welcome h1 {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 7;
+  grid-area: 1 / 1 / 3 / 8;
+  padding: 20px;
+  letter-spacing: 1px;
+}
+
+.welcome span:first-of-type {
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 3;
+  grid-area: 3 / 3 / 4 / 6;
+}
+
+.welcome form {
+  -ms-grid-row: 4;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 3;
+  grid-area: 4 / 3 / 6 / 6;
+}
+
+.welcome form #waveName {
+  padding: 10px 50px;
+}
+
+.welcome form #startWave {
+  padding: 10px 30px;
+}
+
+.letsGo {
+  -ms-grid-row: 6;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 3;
+  grid-area: 6 / 3 / 8 / 6;
 }
 
 .letsGo p {
