--- a/styles/scss/_header.scss
+++ b/styles/scss/_header.scss
@@ -1,14 +1,60 @@
 // Welcome Screen
 header {
-    // border: 6px solid white;
-    height: 100vh;
-    margin: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
-
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url('../quizAssets/background-img-3.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 
 
+.welcome {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: repeat(7, 1fr);
+
+        h1 { 
+            font-family: $robotoFont;
+            @include fontSize(85);
+            margin-bottom: 20px;
+            grid-area: 1 / 1 / 3 / 8;
+            padding: 20px; 
+        }
+
+        span:first-of-type { 
+            grid-area: 3 / 3 / 4 / 6; 
+        }
+
+        form { 
+            grid-area: 4 / 3 / 6 / 6; 
+            display: flex;
+            flex-direction: column;
+
+            #waveName {
+                padding: 10px 50px;
+                margin-bottom: 20px;
+            }
+
+            #startWave {
+                padding: 10px 30px;
+            }
+        }
+
+}
+
+
+.letsGo  {
+    grid-area: 6 / 3 / 8 / 6; 
+
+    p {
+        @include fontSize(35);
+        margin: 30px 0;
+        background-color:
+        black;
+        padding: 20px;
+    }
+}
