--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -43,30 +43,13 @@ body {
     color: white;
     font-family: $bodyFont;
     @include fontSize(20);
-    }
+}
 
 
 header,
 .question,
 .results {
     height: 100vh;
-}
-
-header {
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url('/quizAssets/g-shoe.jpg');
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
-
-}
-
-h1 {
-    font-family: $archivoHeadingfont;
-    font-size: 6rem;
-    margin-bottom: 20px;
-    // box-shadow: -30px -15px 0px 0px $vaporOrange;
-    // background-color: #08C5D3;
-    
 }
 
 
@@ -76,43 +59,18 @@ button,
     background-color: $vaporGold;
     border: 2px solid $vaporGold;
     font-weight: bolder;
+}
+
+
+button,
+#startWave,
+.redo ,
+h1 {
+    
     text-transform: uppercase;
+    letter-spacing: 2px;
 }
 
 
-.welcome {
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: repeat(7, 1fr);
 
-        h1 { 
-            grid-area: 1 / 1 / 3 / 8;
-            padding: 20px; 
-            letter-spacing: 1px;
-        }
-
-        span:first-of-type { 
-            grid-area: 3 / 3 / 4 / 6; 
-        }
-
-        form { 
-            grid-area: 4 / 3 / 6 / 6; 
-
-            #waveName {
-                padding: 10px 50px;
-            }
-
-            #startWave {
-                padding: 10px 30px;
-            }
-        }
-
-}
-
-.letsGo  {
-    grid-area: 6 / 3 / 8 / 6; 
-
-    p {
-        @include fontSize(35);
-    }
-}
+// USE FOCUS-WITHIN
