--- a/styles/style.css
+++ b/styles/style.css
@@ -180,8 +180,6 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
 }
 
 header {
-  height: 100vh;
-  margin: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -192,32 +190,110 @@ header {
       -ms-flex-pack: center;
           justify-content: center;
   text-align: center;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.6)), to(rgba(0, 0, 0, 0.7))), url("../quizAssets/background-img-3.jpg");
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url("../quizAssets/background-img-3.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
-img {
-  width: 33%;
+.welcome {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[7];
+      grid-template-columns: repeat(7, 1fr);
+  -ms-grid-rows: (1fr)[7];
+      grid-template-rows: repeat(7, 1fr);
+}
+
+.welcome h1 {
+  font-family: "Roboto Mono", monospace;
+  font-size: 85px;
+  font-size: 8.5rem;
+  margin-bottom: 20px;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 7;
+  grid-area: 1 / 1 / 3 / 8;
+  padding: 20px;
+}
+
+.welcome span:first-of-type {
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 3;
+  grid-area: 3 / 3 / 4 / 6;
+}
+
+.welcome form {
+  -ms-grid-row: 4;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 3;
+  grid-area: 4 / 3 / 6 / 6;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.welcome form #waveName {
+  padding: 10px 50px;
+  margin-bottom: 20px;
+}
+
+.welcome form #startWave {
+  padding: 10px 30px;
+}
+
+.letsGo {
+  -ms-grid-row: 6;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 3;
+  grid-area: 6 / 3 / 8 / 6;
+}
+
+.letsGo p {
+  font-size: 35px;
+  font-size: 3.5rem;
+  margin: 30px 0;
+  background-color: black;
+  padding: 20px;
+}
+
+.question img {
   height: 300px;
 }
 
 .question {
-  display: none;
   display: -ms-grid;
   display: grid;
+  display: none;
   -ms-grid-columns: (1fr)[8];
       grid-template-columns: repeat(8, 1fr);
   -ms-grid-rows: (1fr)[4];
       grid-template-rows: repeat(4, 1fr);
 }
 
-h2 {
+.question h2 {
+  font-size: 40px;
+  font-size: 4rem;
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   -ms-grid-column: 1;
   -ms-grid-column-span: 8;
   grid-area: 1 / 1 / 2 / 9;
+  padding: 50px 0;
+  font-weight: bold;
 }
 
-form {
+.question .questionBox {
   -ms-grid-row: 2;
   -ms-grid-row-span: 2;
   -ms-grid-column: 2;
@@ -225,16 +301,30 @@ form {
   grid-area: 2 / 2 / 4 / 8;
 }
 
-button {
+.question .next {
   -ms-grid-row: 4;
   -ms-grid-row-span: 1;
   -ms-grid-column: 4;
   -ms-grid-column-span: 2;
   grid-area: 4 / 4 / 5 / 6;
+  height: 50px;
+  margin-top: 40px;
 }
 
 input[type=radio] {
-  visibility: hidden;
+  opacity: 0;
+}
+
+label:checked,
+label:hover,
+label:active {
+  border: 3px solid #f00078;
+}
+
+label {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 33%;
+          flex: 1 0 33%;
 }
 
 .questionBox {
@@ -284,7 +374,7 @@ img {
 body {
   background-color: black;
   color: white;
-  font-family: "Noto Sans", sans-serif;
+  font-family: "Source Code Pro", monospace;
   font-size: 20px;
   font-size: 2rem;
 }
@@ -295,81 +385,18 @@ header,
   height: 100vh;
 }
 
-header {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.6)), to(rgba(0, 0, 0, 0.7))), url("/quizAssets/g-shoe.jpg");
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url("/quizAssets/g-shoe.jpg");
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
-}
-
-h1 {
-  font-family: "Archivo", sans-serif;
-  font-size: 6rem;
-  margin-bottom: 20px;
-}
-
 button,
 #startWave,
 .redo {
   background-color: #ffa818;
   border: 2px solid #ffa818;
   font-weight: bolder;
+}
+
+button,
+#startWave,
+.redo,
+h1 {
   text-transform: uppercase;
-}
-
-.welcome {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[7];
-      grid-template-columns: repeat(7, 1fr);
-  -ms-grid-rows: (1fr)[7];
-      grid-template-rows: repeat(7, 1fr);
-}
-
-.welcome h1 {
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 2;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 7;
-  grid-area: 1 / 1 / 3 / 8;
-  padding: 20px;
-  letter-spacing: 1px;
-}
-
-.welcome span:first-of-type {
-  -ms-grid-row: 3;
-  -ms-grid-row-span: 1;
-  -ms-grid-column: 3;
-  -ms-grid-column-span: 3;
-  grid-area: 3 / 3 / 4 / 6;
-}
-
-.welcome form {
-  -ms-grid-row: 4;
-  -ms-grid-row-span: 2;
-  -ms-grid-column: 3;
-  -ms-grid-column-span: 3;
-  grid-area: 4 / 3 / 6 / 6;
-}
-
-.welcome form #waveName {
-  padding: 10px 50px;
-}
-
-.welcome form #startWave {
-  padding: 10px 30px;
-}
-
-.letsGo {
-  -ms-grid-row: 6;
-  -ms-grid-row-span: 2;
-  -ms-grid-column: 3;
-  -ms-grid-column-span: 3;
-  grid-area: 6 / 3 / 8 / 6;
-}
-
-.letsGo p {
-  font-size: 35px;
-  font-size: 3.5rem;
+  letter-spacing: 2px;
 }
