--- a/styles/scss/_resultBox.scss
+++ b/styles/scss/_resultBox.scss
@@ -2,3 +2,30 @@
 .redo {
     display:none;
 }
+
+.result {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(7, 1fr);
+}
+
+
+h3 {
+    @include fontSize(45);
+    font-weight: bold;
+    grid-area: 1 / 2 / 3 / 6;
+}    
+
+h3,
+.aesthetic {
+    text-align: center;
+}
+
+.aesthetic { 
+    grid-area: 3 / 3 / 4 / 5; 
+    @include fontSize(60);
+}
+
+
+
+// .div3 { grid-area: 4 / 1 / 7 / 7; } 
