--- a/styles/style.css
+++ b/styles/style.css
@@ -309,6 +309,7 @@ header {
   grid-area: 4 / 4 / 5 / 6;
   height: 50px;
   margin-top: 40px;
+  padding: 0 40px;
 }
 
 input[type=radio] {
@@ -344,6 +345,41 @@ label {
 .result,
 .redo {
   display: none;
+}
+
+.result {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[6];
+      grid-template-columns: repeat(6, 1fr);
+  -ms-grid-rows: (1fr)[7];
+      grid-template-rows: repeat(7, 1fr);
+}
+
+h3 {
+  font-size: 45px;
+  font-size: 4.5rem;
+  font-weight: bold;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 4;
+  grid-area: 1 / 2 / 3 / 6;
+}
+
+h3,
+.aesthetic {
+  text-align: center;
+}
+
+.aesthetic {
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 2;
+  grid-area: 3 / 3 / 4 / 5;
+  font-size: 60px;
+  font-size: 6rem;
 }
 
 span,
