--- a/styles/scss/_header.scss
+++ b/styles/scss/_header.scss
@@ -6,7 +6,7 @@ header {
     text-align: center;
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url('../quizAssets/background-img-3.jpg');
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: auto;
     background-position: center;
 }
 
@@ -27,6 +27,7 @@ header {
 
         span:first-of-type { 
             grid-area: 3 / 3 / 4 / 6; 
+            
         }
 
         form { 
@@ -58,3 +59,5 @@ header {
         padding: 20px;
     }
 }
+
+
