--- a/styles/scss/_questionBox.scss
+++ b/styles/scss/_questionBox.scss
@@ -17,6 +17,7 @@
         grid-area: 1 / 1 / 2 / 9; 
         padding: 50px 0;
         font-weight: bold;
+        margin-top: 20px;
     }
 
     .questionBox { 
@@ -32,20 +33,35 @@
 
 }
 
+
 input[type=radio]{
     opacity: 0;
-}
-
-label:checked,
-label:hover,
-label:active {
-    border: 3px solid $vaporPink;
 }
 
 
 label {
     flex: 1 0 33%;
 }
+
+
+input[type=radio]:focus,
+input[type=text]:focus,
+input[type=submit]:focus,
+label:focus, 
+button:focus{
+    outline: 2px solid $vaporOrange;
+}
+
+label:hover{
+    border: 3px solid $vaporPink;
+}
+
+
+// input[type=radio]:active {
+//     outline: 3px solid $vaporOrange;
+// }
+// **Having a hard time getting the label to stay outlined when clicked**
+
 
 .questionBox {
     display: flex;
