--- a/styles/scss/_resultBox.scss
+++ b/styles/scss/_resultBox.scss
@@ -16,7 +16,7 @@ h3 {
     font-weight: bold;
     letter-spacing: 15px;
     padding: 20px;
-    text-align: center;
+    // text-align: center;
     grid-area: 3 / 3 / 4 / 5; 
     @include fontSize(60);
     background-color: black;
@@ -47,12 +47,8 @@ h3 {
 }
 
 .glitch {
-    &:before, 
+    
     &:after {
-        @include glitch('Grunge');
-
-
-    } &:after {
         color: #f0f;
         z-index: -2;
 
@@ -111,11 +107,15 @@ h3 {
 }
 
 
-
 .aestheticP {
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url(../quizAssets/pastel-pic.jpg);
 }
 
+footer {
+    background-color: $black;
+    text-align: center;
+    font-size: 1rem;
+}
 
 // Glitch Effect Credit
 // https://codepen.io/ihatetomatoes/pen/8a16e11e6d6206f5eb1ed7a37fbbe1dc
