--- a/styles/scss/_questionBox.scss
+++ b/styles/scss/_questionBox.scss
@@ -57,9 +57,6 @@ label:hover{
 }
 
 
-// input[type=radio]:active {
-//     outline: 3px solid $vaporOrange;
-// }
 // **Having a hard time getting the label to stay outlined when clicked**
 
 
@@ -71,5 +68,60 @@ label:hover{
 }
 
 
+// Media Queries
 
+@media(max-width: 1080px){
+    h2 {
+        @include fontSize (37);
+    }
+}
+
+@media (max-width: 805px){
+    .question{
+        h2 {
+            @include fontSize(35);
+            text-align: center;
+        }
+    }
+}
+
+@media (max-width: 580px){
+    .question {
+
+        form {
+
+            flex-direction: column;
+
+            label {
+                max-width: 525px;
+                width: 80%;
+                margin: 0 auto;
+
+            }
+        }
+
+       .next {
+        width: 100%;
+        }
+    }
+}
+
+@media (max-width: 450px){
+
+    .question {
+        
+        h2 {
+            @include fontSize(32);
+            
+        }
+
+        form {
+            flex-direction: column;
+        }
+
+    }
+
+
+
+}
 
