--- a/styles/style.css
+++ b/styles/style.css
@@ -189,7 +189,6 @@ header {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  text-align: center;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.6)), to(rgba(0, 0, 0, 0.7))), url("../quizAssets/background-img-3.jpg");
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url("../quizAssets/background-img-3.jpg");
   background-repeat: no-repeat;
@@ -265,6 +264,105 @@ header {
   margin: 30px 0;
   background-color: black;
   padding: 20px;
+}
+
+input[type=text]::-webkit-input-placeholder {
+  font-size: 25px;
+  font-size: 2.5rem;
+}
+
+input[type=text]:-ms-input-placeholder {
+  font-size: 25px;
+  font-size: 2.5rem;
+}
+
+input[type=text]::-ms-input-placeholder {
+  font-size: 25px;
+  font-size: 2.5rem;
+}
+
+input[type=text]::placeholder {
+  font-size: 25px;
+  font-size: 2.5rem;
+}
+
+@media (max-width: 805px) {
+  .welcome h1 {
+    font-size: 70px;
+    font-size: 7rem;
+  }
+  .welcome input[type=text]::-webkit-input-placeholder {
+    font-size: 20px;
+    font-size: 2rem;
+  }
+  .welcome input[type=text]:-ms-input-placeholder {
+    font-size: 20px;
+    font-size: 2rem;
+  }
+  .welcome input[type=text]::-ms-input-placeholder {
+    font-size: 20px;
+    font-size: 2rem;
+  }
+  .welcome input[type=text]::placeholder {
+    font-size: 20px;
+    font-size: 2rem;
+  }
+  .welcome span:first-of-type {
+    -ms-grid-column: 2;
+        grid-column-start: 2;
+    grid-column-end: 7;
+  }
+  .welcome form #waveName {
+    padding: 10px 0;
+  }
+  .letsGo {
+    -ms-grid-column: 2;
+        grid-column-start: 2;
+    grid-column-end: 7;
+  }
+}
+
+@media (max-width: 450px) {
+  .welcome h1 {
+    font-size: 50px;
+    font-size: 5rem;
+    padding: 0;
+  }
+  .welcome span:first-of-type {
+    -ms-grid-column: 1;
+        grid-column-start: 1;
+    grid-column-end: 8;
+  }
+  .welcome form {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  input[type=text]::-webkit-input-placeholder {
+    font-size: 15px;
+    font-size: 1.5rem;
+    padding: 0;
+  }
+  input[type=text]:-ms-input-placeholder {
+    font-size: 15px;
+    font-size: 1.5rem;
+    padding: 0;
+  }
+  input[type=text]::-ms-input-placeholder {
+    font-size: 15px;
+    font-size: 1.5rem;
+    padding: 0;
+  }
+  input[type=text]::placeholder {
+    font-size: 15px;
+    font-size: 1.5rem;
+    padding: 0;
+  }
+  .letsGo p {
+    font-size: 25px;
+    font-size: 2.5rem;
+    margin: unset;
+  }
 }
 
 .question img {
@@ -349,6 +447,34 @@ label:hover {
           justify-content: center;
 }
 
+@media (max-width: 1080px) {
+  h2 {
+    font-size: 37px;
+    font-size: 3.7rem;
+  }
+}
+
+@media (max-width: 805px) {
+  .question h2 {
+    font-size: 35px;
+    font-size: 3.5rem;
+    text-align: center;
+  }
+}
+
+@media (max-width: 450px) {
+  .question h2 {
+    font-size: 32px;
+    font-size: 3.2rem;
+  }
+  .question form {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 .result,
 .redo {
   display: none;
@@ -367,7 +493,6 @@ h3 {
   font-weight: bold;
   letter-spacing: 15px;
   padding: 20px;
-  text-align: center;
   -ms-grid-row: 3;
   -ms-grid-row-span: 1;
   -ms-grid-column: 3;
@@ -415,17 +540,6 @@ h3 {
 .aestheticP .glitch:after {
   display: block;
   content: "Pastel";
-  position: absolute;
-  top: 20px;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  opacity: .8;
-}
-
-.glitch:before, .glitch:after {
-  display: block;
-  content: "Grunge";
   position: absolute;
   top: 20px;
   left: 0;
@@ -530,6 +644,12 @@ h3 {
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url(../quizAssets/pastel-pic.jpg);
 }
 
+footer {
+  background-color: #000000;
+  text-align: center;
+  font-size: 1rem;
+}
+
 span,
 h1,
 h2,
@@ -584,4 +704,28 @@ button,
 h1,
 h3 {
   text-transform: uppercase;
+}
+
+header,
+input[type=text]::-webkit-input-placeholder,
+h3 {
+  text-align: center;
+}
+
+header,
+input[type=text]:-ms-input-placeholder,
+h3 {
+  text-align: center;
+}
+
+header,
+input[type=text]::-ms-input-placeholder,
+h3 {
+  text-align: center;
+}
+
+header,
+input[type=text]::placeholder,
+h3 {
+  text-align: center;
 }
