--- a/styles/scss/_resultBox.scss
+++ b/styles/scss/_resultBox.scss
@@ -16,7 +16,6 @@ h3 {
     font-weight: bold;
     letter-spacing: 15px;
     padding: 20px;
-    // text-align: center;
     grid-area: 3 / 3 / 4 / 5; 
     @include fontSize(60);
     background-color: black;
@@ -111,11 +110,28 @@ h3 {
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url(../quizAssets/pastel-pic.jpg);
 }
 
+
 footer {
     background-color: $black;
     text-align: center;
     font-size: 1rem;
 }
+
+.redo {
+    display: block;
+}
+// Will come back to this it was 530 am
+
+
+@media (max-width: 580px){
+    .result {
+        h3 {
+            @include font-size(40);
+        }
+    }
+}
+
+
 
 // Glitch Effect Credit
 // https://codepen.io/ihatetomatoes/pen/8a16e11e6d6206f5eb1ed7a37fbbe1dc
