--- a/styles/scss/_header.scss
+++ b/styles/scss/_header.scss
@@ -3,7 +3,6 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    // text-align: center;
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url('../quizAssets/background-img-3.jpg');
     background-repeat: no-repeat;
     background-size: auto;
@@ -105,7 +104,7 @@ input[type=text]::placeholder {
 @media(max-width:580px){
     .welcome{
         h1 {
-            @include fontSize(55px);
+            @include fontSize(55);
         }
     }
 }
@@ -142,6 +141,7 @@ input[type=text]::placeholder {
             margin: unset;
         }
     }
-    
-    
+     
 }
+
+
