--- a/styles/scss/_header.scss
+++ b/styles/scss/_header.scss
@@ -97,17 +97,19 @@ input[type=text]::placeholder {
         h1 {
             @include fontSize(60);
             text-align: center;
+            margin-bottom: 0;
+            padding: 0;
         }
     }
 }
 
-@media(max-width:580px){
-    .welcome{
-        h1 {
-            @include fontSize(55);
-        }
-    }
-}
+// @media(max-width:580px){
+//     .welcome{
+//         h1 {
+//             @include fontSize(55);
+//         }
+//     }
+// }
 
 @media(max-width: 450px){
     
