--- a/styles/scss/_header.scss
+++ b/styles/scss/_header.scss
@@ -3,7 +3,6 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    // text-align: center;
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url('../quizAssets/background-img-3.jpg');
     background-repeat: no-repeat;
     background-size: auto;
@@ -98,17 +97,13 @@ input[type=text]::placeholder {
         h1 {
             @include fontSize(60);
             text-align: center;
+            margin-bottom: 0;
+            padding: 0;
         }
+
     }
 }
 
-@media(max-width:580px){
-    .welcome{
-        h1 {
-            @include fontSize(55px);
-        }
-    }
-}
 
 @media(max-width: 450px){
     
@@ -116,7 +111,7 @@ input[type=text]::placeholder {
 
         h1 {
             @include fontSize(45);
-            padding: 0;
+        
         }
 
         span:first-of-type {
@@ -133,7 +128,7 @@ input[type=text]::placeholder {
     }
 
     input[type=text]::placeholder{
-        @include fontSize(16);
+        @include fontSize(14);
         padding: 0;
     }
 
