--- a/styles/scss/_header.scss
+++ b/styles/scss/_header.scss
@@ -17,30 +17,40 @@ header {
     grid-template-rows: repeat(7, 1fr);
 
         h1 { 
-            font-family: $robotoFont;
             @include fontSize(85);
             margin-bottom: 20px;
             grid-area: 1 / 1 / 3 / 8;
             padding: 20px; 
         }
 
-        span:first-of-type { 
+        span { 
             grid-area: 3 / 3 / 4 / 6; 
-            
+
+            &:nth-of-type(2) {
+                grid-area: 3 / 3 / 4 / 6;
+                margin-top: 35px;       
+            }    
         }
+        
 
         form { 
             grid-area: 4 / 3 / 6 / 6; 
             display: flex;
             flex-direction: column;
 
-            #waveName {
+            input[type=text] {
                 padding: 10px 50px;
                 margin-bottom: 20px;
+
+                &::placeholder {
+                    letter-spacing: 8px;
+                }
             }
 
-            #startWave {
+            input[type=submit] {
                 padding: 10px 30px;
+                width: 80%;
+                align-self: center;
             }
         }
 
@@ -56,6 +66,8 @@ header {
         background-color:
         black;
         padding: 20px;
+        
+    
     }
 }
 
@@ -79,7 +91,7 @@ input[type=text]::placeholder {
         }
 
         form {
-            #waveName{
+            input[type=text] {
                 padding: 10px 0;
             }
         }
