--- a/styles/scss/_questionBox.scss
+++ b/styles/scss/_questionBox.scss
@@ -4,28 +4,33 @@
 }
 
 
+
 // Question Container
 .question {
-    display: grid;
+    // display: grid;
     display: none;
-    grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    // grid-template-columns: repeat(8, 1fr);
+    // grid-template-rows: repeat(4, 1fr);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     
     
     h2 { 
         @include fontSize(40);
-        grid-area: 1 / 1 / 2 / 9; 
+        // grid-area: 1 / 1 / 2 / 9; 
         padding: 50px 0;
         font-weight: bold;
         margin-top: 20px;
     }
 
-    .questionBox { 
-        grid-area: 2 / 2 / 4 / 8; 
-    }
+    // .questionBox { 
+    //     grid-area: 2 / 2 / 4 / 8; 
+    // }
 
     .next{ 
-        grid-area: 4 / 4 / 5 / 6; 
+        // grid-area: 4 / 4 / 5 / 6; 
         height: 50px;
         margin-top: 40px;
         padding: 0 40px
@@ -55,6 +60,7 @@ button:focus{
 label:hover{
     border: 3px solid $vaporPink;
 }
+
 
 
 // **Having a hard time getting the label to stay outlined when clicked**
