--- a/styles/scss/_variablesMixins.scss
+++ b/styles/scss/_variablesMixins.scss
@@ -16,8 +16,9 @@
 
 
 // Fonts
-    $robotoFont: 'Roboto Mono', monospace;
-    $bodyFont: 'Source Code Pro', monospace;
+    // $robotoFont: 'Roboto Mono', monospace;
+    $arialFont: 'Arial', sans-serif;
+    $bodyFont: 'Questrial', sans-serif;
 
     @mixin fontSize($sizeValue) {
     font-size: ($sizeValue/10) * 1rem;
